<resources>
    <string name="app_name">Filmes</string>
    <string name="pesquisar"> Pesquisar (i.e. Star Wars)</string>
    <string name="logo">Logo</string>
    <string name="lupa">Lupa</string>
    <string name="filme">Filme</string>
    <string name="pais">País:</string>
    <string name="lingua_original">Língua Original:</string>
    <string name="diretor">Diretor:</string>
    <string name="atores">Atores:</string>
    <string name="ano">Ano:</string>
    <string name="genero">Gênero:</string>
    <string name="faixa_etaria">Faixa Etária:</string>
    <string name="nome">Nome:</string>
    <string name="lancamento">Lançamento:</string>
    <string name="duracao">Duração:</string>
    <string name="sinopse">Sinopse:</string>
    <string name="premios">Prêmios:</string>
    <string name="procurar">Procurar</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="dolor_sit_amet">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="c_digo">Código</string>
    <string name="titulo">Titulo</string>
    <string name="diretor2">Diretor</string>
    <string name="atores2">Atores</string>
    <string name="g_nero">Gênero</string>
    <string name="faixa_et_ria">Faixa Etária</string>
    <string name="lan_amento">Lançamento</string>
    <string name="dura_o">Duração</string>
    <string name="sinopse2">Sinopse</string>
    <string name="pa_s">País</string>
    <string name="lingua_original2">Lingua Original</string>
    <string name="pr_mios">Prêmios</string>
    <string name="excluir">Excluir</string>
    <string name="cadastrar">Cadastrar</string>
</resources>