<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="172dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <EditText
        android:id="@+id/etPesquisa"
        android:layout_width="255dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/pesquisar"
        android:background="@android:drawable/screen_background_light"
        android:ems="10"
        android:hint="@string/pesquisar"
        android:inputType="textPersonName"
        android:nextFocusForward="@id/button"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="43dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/lupa"
        app:layout_constraintBottom_toBottomOf="@+id/etPesquisa"
        app:layout_constraintStart_toEndOf="@+id/etPesquisa"
        app:layout_constraintTop_toTopOf="@+id/etPesquisa"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="Search"
        android:text="@string/procurar"
        app:layout_constraintEnd_toEndOf="@+id/etPesquisa"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/etPesquisa"
        app:layout_constraintTop_toBottomOf="@+id/etPesquisa" />

</androidx.constraintlayout.widget.ConstraintLayout>